<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOPAC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="version">Version 1.0</string>
    <string name="app_title_bar">Mobile OPAC</string>
    <string name="msu_opac">MSU OPAC</string>
    <string name="opac">Online Public Access Catalog</string>
    <string name="search">Search. . .</string>
    <string name="description">This app allows MSU students and researchers to search our database for resources in our various library units.</string>
    <string name="how_to_use">How To Use</string>
    <string name="enter">Enter the words you want to match in our book collections.</string>
    <string name="hours">Library Hours:</string>
    <string name="main">Main Library:</string>
    <string name="mon_fri">- Monday to Friday: 8:00 AM to 5:00 PM</string>
    <string name="sat">- Saturday: 9:00 AM to 4:00 PM</string>
    <string name="sun">- Opens on Sunday preceding scheduled examination.</string>
    <string name="copyright">Copyright 2015.</string>
    <string name="no_result">Nothing found.</string>
    <string name="availability">Check Availability</string>
    <string name="clear">Clear</string>

    <color name="light_red">#DD6666</color>
    <color name="white">#FFFFFF</color>
    <color name="blue">#225690</color>
    <color name="grey">#D1D1D1</color>
    <color name="dark_grey">#878787</color>
    <color name="black">#000000</color>
    <color name="light_grey">#EEEEEE</color>
    <color name="darker_red">#B23B3B</color>

    <string name="title_activity_main_app">MainApp</string>
    <string name="title_activity_settings">MOPAC Settings</string>
    <string name="title_activity_urlsetting">URLSetting</string>
    <string name="title_activity_book_details">BookDetails</string>
    <string name="title_activity_journal_details">JournalDetails</string>
    <string name="title_activity_recent">Recent</string>

</resources>
