<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    tools:context="com.gpplworx.mopac.mopac.Settings">

    <LinearLayout
        android:id="@+id/mopac"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/blue">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/logo"
            android:src="@drawable/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msu_opac"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opac"
            android:textColor="@color/white"
            android:textSize="10dp"/>


    </LinearLayout>

    <ListView
        android:id="@+id/list_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mopac"
        android:layout_above="@+id/copyright"
        android:layout_margin="10dp"></ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>
