<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    tools:context="com.gpplworx.mopac.mopac.Recent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="3dp"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/app_logo"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msu_opac"
                        android:textColor="@color/white"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opac"
                        android:textColor="@color/white"
                        android:textSize="10dp"/>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/clear"
                android:textSize="10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/recent"
        android:layout_below="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recent Searches"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/recent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

        <ListView
            android:id="@+id/search_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:visibility="invisible"
            android:layout_margin="10dp"/>


    </RelativeLayout>
</RelativeLayout>
